# ocpp-proxy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  hacs.json  pyproject.toml  pytest.ini  repository.yaml  requirements.txt  run_tests.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.hacs/: CHANGELOG.md  README.md  config.yaml  run.sh
config/: config.yaml
ocpp-proxy/: Dockerfile  README.md  config.yaml  run.sh
ocpp-proxy/src/ocpp_proxy/: backend_manager.py  charge_point_base.py  charge_point_factory.py  charge_point_v201.py  logger.py  ocpp_service_manager.py
src/ev_charger_proxy/: charge_point.py  charge_point_base.py  charge_point_v201.py  config.py  main.py  ocpp_service_manager.py
src/ocpp_proxy/: __init__.py  backend_manager.py  charge_point_base.py  charge_point_factory.py  charge_point_v16.py  charge_point_v201.py  config.py  ha_bridge.py  logger.py  main.py  ocpp_service_manager.py
tests/: conftest.py  test_backend_manager.py  test_charge_point.py  test_config.py  test_e2e_ocpp_flows.py  test_ha_bridge.py  test_logger.py  test_main.py  test_ocpp_service_manager.py
tests/fixtures/: minimal_config.yaml  test_config.yaml
