[tool.poetry]
name = "ocpp-proxy"
version = "0.1.0"
description = "OCPP 1.6 & 2.0.1 JSON WebSocket proxy for EV charger sharing"
authors = ["OpenChargeHub"]
readme = "README.md"
packages = [{include = "ocpp_proxy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ocpp = ">=2.0.0"
aiohttp = ">=3.9.0"
websockets = ">=12.0"
PyYAML = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-aiohttp = ">=1.0.0"
pytest-mock = ">=3.12.0"
pytest-cov = ">=4.1.0"
aioresponses = ">=0.7.0"

[tool.poetry.scripts]
ocpp-proxy = "ocpp_proxy.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
show_missing = true
fail_under = 85